--- a/src/style.css
+++ b/src/style.css
@@ -409,3 +409,91 @@ label{
     color: #3A4241;
     margin-bottom: 32px;
 }
+.review_order .content{
+    padding: 14px 16px 30px 16px;
+}
+.review_order .content > h1{
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 32px;
+    margin-bottom: 24px;
+}
+.review_order h2{
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+}
+.review_order p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #3A4241;
+    margin-bottom: 0;
+}
+.count_wrap{
+    display: flex;
+    justify-content: space-between;
+}
+.review_order .button{
+    display: block;
+    text-align: center;
+}
+.review_order .cart_item{
+    margin: 16px 0 24px 0;
+}
+.payment_method{
+    margin: 24px 0 10px 0;
+}
+.invalid{
+    border-color: #ED3540;
+}
+.log_in .content{
+    padding: 14px 16px 66px 16px;
+}
+.input_password{
+    display: flex;
+    align-items: center;
+}
+.log_in .content h1{
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 32px;
+    margin-bottom: 16px;
+}
+.log_in .content h6{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 48px;
+}
+.log_in .content .button{
+    text-align: center;
+    margin: 8px 0 20px 0;
+}
+.example_log{
+    display: block;
+    border: 1px solid #EDEDED;
+    border-radius: 8px;
+    padding: 16px 16px 0 ;
+}
+.example_log h2{
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+.example_log p{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-bottom: 24px;
+}
+.menu{
+    display: flex;
+    flex-direction: column;
+    flex: 1 1;
+    justify-content: center;
+    font-size: 26px;
+    font-weight: 600;
+    padding-bottom: 200px;
+}
